@@ -34,6 +34,7 @@ Version 1.1.2 to be released
 - Enh: CFileValidator now works with php.ini's upload_max_filesize strings with K, G, k, m, g (Sam Dark)
 - Enh: Enhanced CActiveForm to make it more robust in case some code error occurs when performing ajax validation (Qiang)
 - Enh: Added the $key parameter to CController::renderDynamic() to better differentiate dynamic content blocks (Qiang)
+- Chg #1118: CActiveRecord::refresh() now updates the record by directly updating the attributes array (Qiang)
 - New #1005: added CWinCache (Sam Dark)
 
 Version 1.1.1 March 14, 2010
